# ppp-dialer

./: .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  ppp-dialer.bb
src/: Makefile.am  wvdial.cc  wvdialbrain.cc  wvdialconf.cc  wvdialer.cc  wvdialmon.cc  wvmodemscan.cc
