
AC_INIT(ppp-dialer, 2.1, yus.projectproto@gmail.com)
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
AM_PROG_AR


AC_CONFIG_FILES([
  Makefile
  deps/wvstreams/Makefile
  src/Makefile
  src/version.h
])

AC_OUTPUT

